<resources>
    <string name="app_name">RickAndMortyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="test">test</string>
    <string name="gender">Gender:</string>
    <string name="all">All</string>
    <string name="status">Status:</string>
    <string name="specy">Specy:</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="episodes">Episodes:</string>
    <string name="created_at_n_in_api">Created At \n(in API):</string>
    <string name="dot">•</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>